# everything

./: Cargo.toml  builder.ts
programs/ai_stuff/ai21/: Cargo.toml
programs/ai_stuff/ai21/src/: main.rs
programs/ai_stuff/improv/: Cargo.toml
programs/ai_stuff/improv/src/: lib.rs
programs/archived/frqcheck.rs/: Cargo.toml  frqcheck.rs
programs/archived/frqsort.rs/: Cargo.toml  frqsort.rs
programs/archived/translate.rs/: Cargo.toml  translate.rs
programs/corpus_tools/clean/: Cargo.toml  clean.rs
programs/corpus_tools/deduplicate.rs/: Cargo.toml  deduplicate.rs
programs/corpus_tools/dicer.rs/: Cargo.toml  dicer.rs
programs/corpus_tools/frqlist.rs/: Cargo.toml  frqlist.rs
programs/corpus_tools/langfilter.rs/: Cargo.toml  langfilter.rs
programs/corpus_tools/lengthfilter.rs/: Cargo.toml  lengthfilter.rs
programs/corpus_tools/norepeat/: Cargo.toml
programs/corpus_tools/norepeat/src/: main.rs
programs/corpus_tools/nosame.rs/: Cargo.toml  nosame.rs
programs/corpus_tools/qc/: Cargo.toml
programs/corpus_tools/qc/src/: main.rs  sort.rs  structs.rs  types.rs
programs/corpus_tools/sentence_seg/: Cargo.toml
programs/corpus_tools/sentence_seg/src/: main.rs
programs/corpus_tools/sentences.rs/: Cargo.toml  sentences.rs
programs/corpus_tools/sort.rs/: Cargo.toml  sort.rs
programs/corpus_tools/wikunzip.rs/: Cargo.toml  wikunzip.rs
programs/experimental/cluster/: Cargo.toml
programs/experimental/cluster/src/: clusterer.rs  main.rs  main2.rs
programs/experimental/diffs/: Cargo.toml
programs/experimental/diffs/src/: main.rs
programs/experimental/diversify/: Cargo.toml
programs/experimental/diversify/src/: main.rs
programs/experimental/dundant/: Cargo.toml
programs/experimental/dundant/src/: main.rs
programs/experimental/kv/: Cargo.toml
programs/experimental/kv/src/: main.rs  main2.rs
programs/experimental/kv2/: Cargo.toml
programs/experimental/kv2/src/: main.rs
programs/experimental/kw/: Cargo.toml
programs/experimental/kw/src/: main.rs
programs/experimental/matcha/src/: lib.rs
programs/experimental/ngrams/: Cargo.toml
programs/experimental/ngrams/src/: main.rs
programs/experimental/parsers/: Cargo.toml
programs/experimental/parsers/src/: lib.rs
programs/fun/dotty/: Cargo.toml
programs/fun/dotty/src/: lib.rs  search.rs
programs/fun/haikufinder/: Cargo.toml
programs/fun/haikufinder/src/: main.rs  regexer.rs  search.rs  summariser.rs
programs/fun/micromanager/: Cargo.toml
programs/fun/micromanager/src/: lib.rs
programs/fun/pending/: Cargo.toml
programs/fun/pending/src/: lib.rs  partial.rs  partial2.rs
programs/fun/pixelui/: Cargo.toml
programs/fun/pixelui/src/: main.rs
programs/fun/stringy/: Cargo.toml
programs/fun/stringy/src/: lazystring.rs  lib.rs
programs/langwitch_tools/canslate/: Cargo.toml
programs/langwitch_tools/canslate/src/: main.rs
programs/langwitch_tools/frqcheck_opt/: Cargo.toml
programs/langwitch_tools/langwitch_encode/: Cargo.toml
programs/langwitch_tools/langwitch_query/: Cargo.toml
programs/langwitch_tools/pinyin.rs/: Cargo.toml  pinyin.rs
programs/langwitch_tools/subset/: Cargo.toml
programs/langwitch_tools/wordlist.rs/: Cargo.toml
programs/shared/term_macros/: Cargo.toml
programs/shared/term_macros/src/: lib.rs
programs/useful/ascii.rs/: Cargo.toml  ascii.rs
programs/useful/map/: Cargo.toml
programs/useful/map/src/: main.rs
programs/useful/newlines/: Cargo.toml
programs/useful/newlines/src/: main.rs
programs/useful/recover.rs/: Cargo.toml  recover.rs
programs/wasm_libs/langdetect-wasm/: Cargo.toml
programs/wasm_libs/langdetect-wasm/src/: lib.rs
