[package]
name = "ai21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.6.0", features = ["https-bundled-probe"] }

[dependencies.term_macros]
path = "../../shared/term_macros"