[[bin]]
name = "translate"
path = "translate.rs"

[dependencies]
async-std = "*"
futures-lite = "*"
miniserde = "0.1"
serde_json = "1.0"
smol = "1.2"
surf = "2.3"

[dependencies.term_macros]
path = "../../shared/term_macros"

[package]
authors = ["Anonymous"]
edition = "2018"
name = "translate"
version = "0.1.0"
