[[bin]]
name = "langfilter"
path = "langfilter.rs"

[dependencies]
memmap = "0.7.0"
rayon = "1.5.3"

[dependencies.lz4_flex]
default-features = false
version = "0.9.0"

[dependencies.term_macros]
path = "../../shared/term_macros"

[package]
authors = ["Anonymous"]
edition = "2018"
name = "langfilter"
version = "0.1.0"
