[package]
name = "diversify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = { version = "0.9.5", default-features = false }
rayon = "1.5.3"
memmap = "0.7.0"

[dependencies.term_macros]
path = "../../shared/term_macros"