[package]
name = "dundant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = { version = "0.9.0", default-features = false }
rayon = "*"
memmap = "*"
once_cell = "*"
ansi-hex-color = "0.1.1"

[dependencies.term_macros]
path = "../../shared/term_macros"