[package]
name = "haikufinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10"
regex = "1.5"
rayon = "1.5"
genawaiter = "0.99"
nohash-hasher = "*"
rand = "0.8.5"
dashmap = { version = "*", features = ["serde"]}
rustc-hash = "*"
rmp-serde = "*"
serde = { version = "*", features = ["derive"] }

[profile.test]
opt-level = 2
